--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,62 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title> Toy Robot Simulator (Sachin Suthar) </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="controls" [fullscreen]="true">
+  <div class="main-controls">
+    <ion-item class="ion-group-box">
+      <ion-label>X :</ion-label>
+      <ion-input [(ngModel)]="x" type="number" value="0"></ion-input>
+    </ion-item>
 
+    <ion-item class="ion-group-box">
+      <ion-label>Y :</ion-label>
+      <ion-input [(ngModel)]="y" type="number" value="0"></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label>Direction</ion-label>
+      <ion-select id="facing" placeholder="" [(ngModel)]="facing">
+        <ion-select-option value="NORTH">North</ion-select-option>
+        <ion-select-option value="SOUTH">South</ion-select-option>
+        <ion-select-option value="WEST">West</ion-select-option>
+        <ion-select-option value="EAST">East</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </div>
+
+  <ion-toolbar class="controls">
+    <ion-button size="large" (click)="placeRobot()" color="primary"
+      >Place the Robot</ion-button
+    >
+  </ion-toolbar>
+
+  <ion-item-divider>
+    <ion-toolbar class="controls">
+      <ion-button (click)="turnLeft()" size="large">↰ Left</ion-button>
+      <ion-button (click)="move()" size="large">↥ Move</ion-button>
+      <ion-button (click)="turnRight()" size="large">↱ Right</ion-button>
+      <ion-button size="large" (click)="report()" color="success"
+        >Report</ion-button
+      >
+    </ion-toolbar>
+  </ion-item-divider>
+
+
+
+  <br /><br />
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <div class="table" id="table">
+      <div id="robot" class="robot"></div>
+    </div>
+    <ion-text color="primary">
+      <h2>Output:</h2>
+    </ion-text>
+    <div class="log">
+       
+      
+    </div>
   </div>
 </ion-content>
